--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
+    "@types/node-sass": "^4.11.0",
     "@types/react": "16.9.3",
     "@types/react-dom": "16.9.1",
+    "node-sass": "^4.12.0",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
     "react-scripts": "3.1.2",
@@ -16,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:css": "node-sass src/style/scss -o  src/style/css",
+    "watch:css": "npm run build:css && node-sass src/style/scss -o  src/style/css --watch"
   },
   "eslintConfig": {
     "extends": "react-app"
