--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
+    "jest": "jest",
     "build:css": "node-sass src/style/scss -o  src/style/css",
     "watch:css": "npm run build:css && node-sass src/style/scss -o  src/style/css --watch"
   },
@@ -141,7 +142,7 @@
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
-    "sass-loader": "^7.2.0",
+    "sass-loader": "^8.0.0",
     "webpack": "^4.40.2"
   }
 }
