--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@babel/core": "7.6.0",
     "@babel/parser": "^7.6.2",
