--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node-sass": "^4.11.0",
     "@types/react": "16.9.3",
     "@types/react-dom": "16.9.1",
+    "@types/react-redux": "^7.1.4",
+    "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
     "babel-eslint": "10.0.3",
@@ -53,6 +55,8 @@
     "react-app-polyfill": "^1.0.3",
     "react-dev-utils": "^9.0.4",
     "react-dom": "^16.10.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "semver": "6.3.0",
